<resources>
    <string name="app_name">CreatingInvoicing</string>
    <string name="Title">Create invoices</string>
    <string name="empty"> </string>
    <string name="dashboard">Dashboard</string>
    <string name="lastInvoices">Recent invoices</string>
    <string name="seeMore">see more</string>
    <string name="lastItems">Recent items</string>
    <string name="addItem">add product</string>
    <string name="chooseItems">Choose item</string>
    <string name="addInvoice">Add invoice</string>
    <string name="searchByNumber">Search by invoice number</string>
    <string name="searchByDate">Search by date</string>
    <string name="catalogNumber"> ID</string>
    <string name="itemName"> name</string>
    <string name="itemPrice">product price</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="updateItem">Update item</string>
    <string name="update">update</string>
    <string name="delete">del</string>
    <string name="invoiceNumber">Invoice num</string>
    <string name="date">date</string>
    <string name="price">price</string>
    <string name="name">name</string>
    <string name="total">Total</string>
    <string name="noInvoices">No invoices</string>
    <string name="noItems">no items</string>
    <string name="back">main</string>
    <string name="quantity">Amount</string>
    <string name="number">num</string>
    <string name="invoice">Invoicing</string>
    <string name="search">search</string>
    <string name="itemsList"> products</string>
    <string name="invoicesList">list of invoices</string>
    <string name="print">print</string>
    <string name="showAll"> all products</string>
</resources>