<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/totalLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="#000000"
        android:background="@color/teal_700"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/quantityLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/quantity"
        android:textColor="#000000"
        android:background="@color/teal_700"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/priceLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="#000000"
        android:background="@color/teal_700"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/nameLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#000000"
        android:background="@color/teal_700"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/numberLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="#000000"
        android:background="@color/teal_700"
        android:maxLines="1"/>

</LinearLayout>