<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E4D4FF">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="66dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"

        android:text="@string/itemsList"
        android:textColor="#040403"
        android:textSize="25sp" />

    <Button
        android:id="@+id/seeMoreItems"
        android:layout_width="126dp"
        android:layout_height="59dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="278dp"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_weight="1"
        android:text="@string/showAll"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lastItems"
        android:layout_width="253dp"
        android:layout_height="56dp"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_weight="1"

        android:gravity="center_vertical"
        android:text="@string/lastItems"
        android:textColor="#1E1D1D"
        android:textSize="16sp" />

    <TextView
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastItems"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="17dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:padding="5dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastItems"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="17dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/teal_200"
        android:padding="5dp"
        android:text="@string/itemName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastItems"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:padding="5dp"
        android:text="@string/catalogNumber" />

    <ListView
        android:id="@+id/itemsList"
        android:layout_width="wrap_content"
        android:layout_height="305dp"

        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:dividerHeight="1dp"
        android:padding="2dp"
        />

    <Button
        android:id="@+id/seeMoreInvoices"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemsList"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/invoicesList"
        android:textSize="14sp" />

    <Button
        android:id="@+id/addInvoice"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemsList"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/addInvoice" />

</RelativeLayout>
